--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "reverui",
   "version": "0.1.0",
   "description": "Effortless UI, Powerful Simplicity",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,5 +19,13 @@
     "reactivity"
   ],
   "author": "PiterWeb",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "tsup": "^8.3.0",
+    "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "vite": "^5.4.6"
+  }
 }
