--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "homepage": "https://rever-ui.vercel.app/",
+  "homepage": "https://reverui.vercel.app/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PiterWeb/ReverUI.git"
