--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reverui",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Effortless UI, Powerful Simplicity",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -31,9 +31,7 @@
   "devDependencies": {
     "ts-node": "^10.9.2",
     "tsup": "^8.3.0",
-    "typescript": "^5.6.2"
-  },
-  "dependencies": {
-    "vite": "^5.4.6"
+    "typescript": "^5.6.2",
+    "vite": "^5.4.7"
   }
 }
