--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reverui",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Effortless UI, Powerful Simplicity",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "prepublish": "build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
